--- a/test/cluster/s3proxy.properties
+++ b/test/cluster/s3proxy.properties
@@ -2,7 +2,7 @@ s3proxy.endpoint=http://localhost:8080
 s3proxy.authorization=aws-v2
 s3proxy.identity=foo
 s3proxy.credential=bar
-jclouds.provider=transient
+jclouds.provider=transient-nio2
 jclouds.identity=foo
 jclouds.credential=bar
 jclouds.regions=us-west-2
